$Id$


v0.95.1		07-Jan-2008

	mbselib.h:
		Added file virscan function.

	mbtask:
		Added last changes for MIB counters.

	mbfido:
		Changed error message on the news gate.
		Switched to virus scanner from library.

	mbfile:
		Switched to virus scanner from library.

	mbsebbs:
		Added MIB counters.

	mbsetup:
		Added support for TCP stream scanners.

	script:
		Added support for Zenwalk.


v0.95.0		25-Nov-2007 - 07-Jan-2008

	mbcico:
		The maximum speed to show to the other end is now 4294976295.

	mbsetup:
		Changed the maximum linespeed to display for TCP/IP sessions to
		4294976295. Numbers above 2147483647 might display on remote
		systems as negative numbers.



v0.92.0		08-Oct-2006 - 16-Oct-2007

	general:
                With this version de default internal character encoding is
                UTF-8. BBS users who have a UTF-8 terminal can use the bbs in
                UTF-8 mode and should have no troubles at all reading and
                writing messages in several language encodings.
		Fixed building on FreeBSD, tested on 5.3 and 6.2.
		Added support to link to the GeoIP library. If it's present on
		your system, mbcico, mbsebbs, mbnewusr and mbnntp will log the
		country from which the connection is made.
                Added example telnet login for NetBSD.
                Dropped support for NetBSD < 3.0.
                Added support for Ubuntu.
		Added support for the ARM processor.

	upgrade:
                Because some directories will be moved, a special upgrade
                procedure is needed. Take the following steps:
                1. Don't install the new source yet and make a backup!
                2. In the source topdir run "make clean".
                3. Unpack the new source.
                4. Build new source, "./configure" and "make".
                5. Run "./mbsetup-0.92.0/mbsetup", enter global setup and
                   leave with save. this 'should' move all your existing